wrap variable in delimiters to fix the issue with the campaign engagement layout, add | pipe to template to output html, add in text-right example which works, but found bug in text left code

--- a/src/lbcamden/components/campaign-engagement-banner/_index.scss
+++ b/src/lbcamden/components/campaign-engagement-banner/_index.scss
@@ -116,7 +116,7 @@ $theme-brand-colour: #005ea5;
     // text-right orientation
     .lbcamden-campaign-engagement-banner--text-right & {
       padding-right: govuk-spacing(7);
-      padding-left: calc(govuk-spacing(6) + var(--gap));
+      padding-left: calc(#{govuk-spacing(6)} + var(--gap));
       border-bottom-right-radius: 50px;
       background-position: top left;
 
@@ -128,7 +128,7 @@ $theme-brand-colour: #005ea5;
 
     // text-left orientation
     .lbcamden-campaign-engagement-banner--text-left & {
-      padding-right: calc(govuk-spacing(6) + var(--gap));
+      padding-right: calc(#{govuk-spacing(6)} + var(--gap));
       padding-left: govuk-spacing(7);
       border-bottom-left-radius: 50px;
       background-position: top right;
